src/objects/FieloAlpha__TagItem__c.object
<CustomObject>
    <description>Set of tags applied to a content feed.</description>
    <fields>
        <fullName>FieloPLT__Banner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner</label>
        <referenceTo>FieloPLT__Banner__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>TagItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__News__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Feed</label>
        <referenceTo>FieloPLT__News__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>TagItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>FieloPLT__Tag__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>TagItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tag Item</label>
    <nameField>
        <displayFormat>TI-{0000}</displayFormat>
        <label>Tag Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ProgramConsistency</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISBLANK(FieloPLT__Banner__c) &amp;&amp; NOT(ISBLANK(FieloPLT__Tag__r.FieloPLT__Program__c))),
FieloPLT__Banner__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Tag__r.FieloPLT__Program__c , 
IF(NOT(ISBLANK(FieloPLT__News__c) &amp;&amp; NOT(ISBLANK(FieloPLT__Tag__r.FieloPLT__Program__c))), 
FieloPLT__News__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Tag__r.FieloPLT__Program__c , 
IF(NOT(ISBLANK(FieloPLT__News__c)) &amp;&amp; NOT(ISBLANK(FieloPLT__Banner__c) &amp;&amp; NOT(ISBLANK(FieloPLT__Tag__r.FieloPLT__Program__c))), 
FieloPLT__News__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Tag__r.FieloPLT__Program__c &amp;&amp; FieloPLT__Banner__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Tag__r.FieloPLT__Program__c, 
false)))</errorConditionFormula>
        <errorMessage>This tag belongs to another program. You must create the tag in this program before trying to use it.</errorMessage>
    </validationRules>
</CustomObject>